--- a/configure.ac
+++ b/configure.ac
@@ -2,8 +2,8 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.69])
-AC_INIT([hello_autotool], [0.1.1], [lijq@newlandcomputer.com])
-AC_CONFIG_SRCDIR([])
+AC_INIT([hello_autotool], [0.0.1], [lijq@newlandcomputer.com])
+AC_CONFIG_SRCDIR([src])
 AC_CONFIG_HEADERS([config.h])
 
 # Checks for programs.
@@ -17,7 +17,7 @@ AC_PROG_CC
 
 # Checks for library functions.
 AC_CONFIG_FILES([Makefile])
-AC_INIT_AUTOMAKE([hell_autotool], [0.0.1])
+AM_INIT_AUTOMAKE([hello_autotool], [0.0.1])
 
 
 AC_OUTPUT
