--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,1 @@
-bin_PROGRAMS=hello_autotools
-
-hello_autotools_SOURCE = main.c hello.c
-
-noinst_HEADERS = hello.h
-
-INCLUDES = -I ../inc
+SUBDIRS = src
