--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,4 +1,8 @@
-bin_PROGRAMS=main
-main_SOURCE = main.c hello.c
+AM_CPPFLAGS = -I$(top_srcdir)/inc
+
+bin_PROGRAMS=hwa
+hwa_SOURCE = hwa.c hello.c
 
 INCLUDES = -I ../inc
+
+noinst_HEADERS=hello.h
