--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,8 +1,8 @@
 AM_CPPFLAGS = -I$(top_srcdir)/inc
 
 bin_PROGRAMS=hwa
-hwa_SOURCE = hwa.c hello.c
+hwa_SOURCES = main.c hello.c
 
 INCLUDES = -I ../inc
 
-noinst_HEADERS=hello.h
+# noinst_HEADERS=hello.h
