Imported from https://darcylee@github.com/darcylee/autotools-learn.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,23 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[project]
+	description = junk repo
+[access "refs/*"]
+	owner = group user/dl (darcylee)
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/dl (darcylee)
+	label-Verified = -1..+1 group user/dl (darcylee)
+	push = group user/dl (darcylee)
+	read = group user/dl (darcylee)
+	rebase = group user/dl (darcylee)
+	removeReviewer = group user/dl (darcylee)
+	submit = group user/dl (darcylee)
+[access "refs/heads/*"]
+	create = group user/dl (darcylee)
+	push = +force group user/dl (darcylee)
+	pushMerge = group user/dl (darcylee)
+	read = group user/dl (darcylee)
+[access "refs/tags/*"]
+	push = group user/dl (darcylee)
+	push = +force group user/dl (darcylee)
